# wikimcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
src/wikimcp/: __init__.py  cli.py
src/wikimcp/server/: __init__.py  auth.py  git_http.py  mcp_server.py  router.py  web_reader.py
src/wikimcp/service/: __init__.py  launchd.py  systemd.py
src/wikimcp/templates/: CLAUDE.md  base.html  page.html  search.html
src/wikimcp/templates/static/: style.css
src/wikimcp/user/: __init__.py  config.py  manager.py
src/wikimcp/wiki/: __init__.py  git_layer.py  operations.py  schema.py
tests/: test_auth.py  test_cli.py  test_git_layer.py  test_operations.py  test_web_reader.py
